Fixed extra scroll for the location with lowest price
Workitems:
#17458 Energy blade - Horizontal scroll is enabling only for the 2nd location in the Energy blade
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C23434

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -4774,7 +4774,7 @@ table.energyCalculationBlade tr.bg-green-jungle td{
 	opacity: 0.9;
 }
 table.energyCalculationBlade tr.border-green-jungle{
-	border: 3px solid;
+	border: 2px solid;
 }
 #grid_labTestResults, #grid_labTestResults .ui-grid-viewport {
 	height: auto !important;
